# duplicate_finder

./: README.md  pubspec.yaml
.github/workflows/: build_windows.yml
android/app/: build.gradle
integration_test/: simple_test.dart
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/: app.dart  datasource.dart  logger.dart  notifier.dart  notifier_state.dart  scanner_screen.dart  style.dart
lib/app/duplicate_finder/: datasource.dart  notifier.dart  notifier_state.dart  scanner_screen.dart
lib/app/project_view/: notifier.dart  (+1 more)
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: hybrid_search_api.rs  mod.rs  project_api.rs  public.rs  scanner_api.rs  tools_api.rs
rust/src/hybrid_search/: mod.rs
rust/src/project/: mod.rs
rust/src/scanner/: compare_result.rs  difference.rs  event.rs  file.rs  interface.rs  local.rs  mod.rs
rust/src/tests/: mod.rs
rust/src/tools/: mod.rs  move_file_to_trash.rs  openfile_and_highlight.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_duplicate_finder.podspec  rust_lib_scanner.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_duplicate_finder.podspec  rust_lib_scanner.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
web/: manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+26 files in other folders)
