[package]
name = "rust_lib_duplicate_finder"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
async-trait = "0.1.81"
flutter_rust_bridge = "=2.2.0"
levenshtein = "1.0.5"
once_cell = "1.19.0"
sha2 = "0.10.8"
tokio = { version = "1.39.2", features = ["full"] }
trash = "5.1.0"  # move file to  Recycle Bin
walkdir = "2.5.0"
