[package]
name = "rust_lib_scanner"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
async-trait = "0.1.81"
crossbeam = "0.8.4"
flutter_rust_bridge = "=2.5.1"
levenshtein = "1.0.5"
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.125"
sha2 = "0.10.8"
tokio = { version = "1.39.2", features = ["full"] }
trash = "5.1.0"  # move file to  Recycle Bin
walkdir = "2.5.0"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1


[profile.dev]
opt-level = 1
